--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <!-- Mapbox-->
+  <link rel="stylesheet" href="assets/css/map.css">
+
 
 </head>
 
@@ -46,7 +49,7 @@
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
         <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <!-- <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -79,13 +82,13 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/ilham.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/photo_2022-02-28_20-15-28.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content">
+          <div class="col-lg-8 pt-4 pt-lg-0 content"><br><br>
             <h3>Ilham Dwi Cahyo</h3>
-            <p class="fst-italic">
+            <p class="fst-italic"><br>
               my name is ilham dwi cahyo, you can call me ilham. I was born in Depok, January 28, 2004. I live in Depok, Jl.Gotong Royong Rt007/Rw009 No.50. i am a student of a tarun bhakti vocational high school, badminton and counting are my hobbies
-            </p>
+            </p><br>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -97,7 +100,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>17</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>18</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>student</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Emailone:</strong> <span>ilhamdwicahyo2801@gmail.com</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
@@ -706,37 +709,18 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+            <!-- <div class="map" id="map"></div> -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.2270459270222!2d106.87102782914376!3d-6.4058289997103195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x10199b0d9e3b6a74!2zNsKwMjQnMjEuMCJTIDEwNsKwNTInMTcuNyJF!5e0!3m2!1sid!2sid!4v1646059208844!5m2!1sid!2sid" width="740" height="370" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
           </div>
 
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>
 
-  </main><!-- End #main -->
+  </main>
+  <!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
@@ -776,6 +760,9 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <script src='assets/js/mapbox-gl.js'></script>
+  <script src='assets/js/mapbox.init.js'></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
