--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
         <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
-        <!-- <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
+        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -297,14 +297,14 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>JUNIOR HEIGHT SCHOOL</h4>
+              <h4>JUNIOR HIGHT SCHOOL</h4>
               <h5>SMP TARUNA BHAKTI</h5>
               <p><em>2016 - 2019</em></p>
               <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
               <!-- <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p> -->
             </div>
             <div class="resume-item">
-              <h4>FOCATIONAL</h4>
+              <h4>VOCATIONAL</h4>
               <h5>SMK TARUNA BHAKTI&amp; REKAYASA PERANGKAT LUNAK</h5>
               <p><em>2019-NOW</em></p>
               <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
@@ -315,7 +315,7 @@
             <div class="resume-item">
               <h4>COMPANY VISIT</h4>
               <h5>PT.Code.Id</h5>
-              <p><em>november-14-2019 </em></p>
+              <p><em>November-14-2019 </em></p>
               <!-- <ul>
                 <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
                 <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
@@ -324,9 +324,9 @@
               </ul> -->
             </div>
             <div class="resume-item">
-              <h4>Landing Page</h4>
-              <!-- <h5></h5> -->
-              <p><em>december-4 -2020</em></p>
+              <h4>intrenship</h4>
+              <h5>PT.SPERO MAHAKARYA NUSANTARA</h5>
+              <p><em>November-15-2021-Now</em></p>
               <ul>
                 <!-- <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
@@ -334,19 +334,19 @@
                 <li>Created 4+ design presentations and proposals a month for clients and account managers</li> -->
               </ul>
             </div>
-            <div class="resume-item">
+            <!-- <div class="resume-item">
               <h4>Landing page with laravel</h4>
               <h5>PT.SPERO MAHAKARYA NUSANTARA</h5>
               <p><em>december-17-2020</em></p>
               <ul>
-                <!-- <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
                 <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li> -->
+                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
               </ul>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </section><!-- End Resume Section -->
@@ -364,9 +364,9 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">Project</li>
-              <li data-filter=".filter-landing-page">App</li>
+              <!-- <li data-filter=".filter-landing-page">App</li> -->
               <!-- <li data-filter=".filter-card">Card</li> -->
-              <li data-filter=".filter-web">Web</li>
+              <!-- <li data-filter=".filter-web">Web</li> -->
             </ul>
           </div>
         </div>
@@ -377,10 +377,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/landing-page-laravel.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 1</h4>
-                <p>Web</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/landing-page-laravel.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -390,11 +389,12 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-landing-page">
             <div class="portfolio-wrap">
               <img src="assets/img/landing-page-css.png" class="img-fluid" alt="">
+              <a href="portfolio-details.html"></a>
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/landing-page-css.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="assets/img/landing-page-css.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="web"><i class="bx bx-plus"></i></a> -->
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -419,10 +419,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/landing-page-laravel2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 2</h4>
-                <p>Web</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/landing-page-laravel2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -433,10 +432,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/projet-ujilevel.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/projet-ujilevel.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -461,10 +459,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/landing-page-laravel4.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>web 4</h4>
-                <p>web</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/landing-page-laravel4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web4"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -475,10 +472,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/landing-page-laravel3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4></h4>
+                <p></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/landing-page-laravel3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
