--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -50,15 +50,27 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="assets/img/landing-page-laravel.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/landing-page-laravel2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/landing-page-laravel3.png" alt="">
+                </div>
+                
+                <div class="swiper-slide">
+                  <img src="assets/img/landing-page-laravel4.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/landing-page-css.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/projet-ujilevel.png" alt="">
                 </div>
 
               </div>
@@ -68,19 +80,18 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>information project</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: project </li>
+                <!-- <li><strong>Client</strong>:</li> -->
+                <li><strong>Project date</strong>: 01 november, 2021</li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <!-- <h2>This is an example of portfolio detail</h2>
               <p>
                 Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
+              </p> -->
             </div>
           </div>
 
